Use svh workaround for iOS navbar overlap issue Wrapper

--- a/src/app/components/Wrapper/wrapper.module.scss
+++ b/src/app/components/Wrapper/wrapper.module.scss
@@ -4,5 +4,9 @@
     @include grid;
 
     width: 100vw;
-    height: 100vh;
+    min-height: calc(100vh - 6rem);
+
+    @supports (height: 100svh) {
+        min-height: calc(100svh - 6rem);
+    }
 }
